Tinkering - fixing theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -417,15 +417,15 @@ run -b '~/.tmux/plugins/tpm/tpm'
 # move panes - prefix + ctrl + o
 # TokyoNight colors for Tmux
 
-base_0='#2a273f'
-base_1='#ea9a97'
-base_2='#393552'
-base_3='#c4a7e7'
-base_4='#393552'
-base_5='#c4a7e7'
-base_6='#2a273f'
-base_7='#393552'
-base_8="#e0def4"
-base_9='#232136'
-base_10='#eb6f92'
+base_0='#286987'  # blue
+base_1='#d7827e'
+base_2='#286983'  # mid blue
+base_3='#ea9d34'  # yellow
+base_4='#9ccfd8'
+base_5='#907aa9'
+base_6='#575279'  # Light blue - main
+base_7='#2a273f'  # green blue - right side
+base_8="#f2e9e1"
+base_9='#faf4ed'
+base_10='#b4637a'
 
