--- a/kitty.conf
+++ b/kitty.conf
@@ -22,49 +22,49 @@ bell_on_tab no
 
 macos_option_as_alt yes
 
-foreground               #e0def4
-background               #232136
-selection_foreground     #e0def4
-selection_background     #312f44
+foreground               #575279
+background               #faf4ed
+selection_foreground     #575279
+selection_background     #eee9e6
 
-url_color                #c4a7e7
+url_color                #907aa9
 
-cursor                   #59546d
-cursor_text_color        #e0def4
+cursor                   #9893a5
+cursor_text_color        #575279
 
-active_tab_foreground    #e0def4
-active_tab_background    #393552
-inactive_tab_foreground  #817c9c
-inactive_tab_background  #232136
+active_tab_foreground    #575279
+active_tab_background    #f2e9de
+inactive_tab_foreground  #6e6a86
+inactive_tab_background  #faf4ed
 
 # black
-color0   #393552
-color8   #817c9c
+color0   #f2e9de
+color8   #6e6a86
 
 # red
-color1   #eb6f92
-color9   #eb6f92
+color1   #b4637a
+color9   #b4637a
 
 # green
-color2   #3e8fb0
-color10  #3e8fb0
+color2   #286983
+color10  #286983
 
 # yellow
-color3   #f6c177
-color11  #f6c177
+color3   #ea9d34
+color11  #ea9d34
 
 # blue
-color4   #9ccfd8
-color12  #9ccfd8
+color4   #56949f
+color12  #56949f
 
 # magenta
-color5   #c4a7e7
-color13  #c4a7e7
+color5   #907aa9
+color13  #907aa9
 
 # cyan
-color6   #ea9a97
-color14  #ea9a97
+color6   #d7827e
+color14  #d7827e
 
 # white
-color7   #e0def4
-color15  #e0def4
+color7   #575279
+color15  #575279
