Messing with themes

--- a/kitty.conf
+++ b/kitty.conf
@@ -22,49 +22,44 @@ bell_on_tab no
 
 macos_option_as_alt yes
 
-foreground               #575279
-background               #faf4ed
-selection_foreground     #575279
-selection_background     #eee9e6
+# Nightfox colors for Kitty
+## name: dayfox
+## upstream: https://github.com/edeneast/nightfox.nvim/raw/main/extra/dayfox/nightfox_kitty.conf
 
-url_color                #907aa9
+background #EAEAEA
+foreground #1D344F
+selection_background #D3D3D3
+selection_foreground #1D344F
+url_color #618774
+cursor #1D344F
 
-cursor                   #9893a5
-cursor_text_color        #575279
+# Tabs
+active_tab_background #6080b0
+active_tab_foreground #D8D8D8
+inactive_tab_background #D3D3D3
+inactive_tab_foreground #7F848E
 
-active_tab_foreground    #575279
-active_tab_background    #f2e9de
-inactive_tab_foreground  #6e6a86
-inactive_tab_background  #faf4ed
+# normal
+color0 #1d344f
+color1 #B95D76
+color2 #618774
+color3 #BA793E
+color4 #6080b0
+color5 #8e6f98
+color6 #6CA7BD
+color7 #CFD6DD
 
-# black
-color0   #f2e9de
-color8   #6e6a86
+# bright
+color8 #24476F
+color9 #C76882
+color10 #629F81
+color11 #CA884A
+color12 #678ABF
+color13 #9F75AC
+color14 #74B2C9
+color15 #CFD6DD
 
-# red
-color1   #b4637a
-color9   #b4637a
-
-# green
-color2   #286983
-color10  #286983
-
-# yellow
-color3   #ea9d34
-color11  #ea9d34
-
-# blue
-color4   #56949f
-color12  #56949f
-
-# magenta
-color5   #907aa9
-color13  #907aa9
-
-# cyan
-color6   #d7827e
-color14  #d7827e
-
-# white
-color7   #575279
-color15  #575279
+# extended colors
+color16 #E3786C
+color17 #D685AF
+  
