--- a/tmux/rosepinedawn.conf
+++ b/tmux/rosepinedawn.conf
@@ -4,11 +4,12 @@ base_0='#286987'  # blue
 base_1='#d7827e'
 base_2='#286983'  # mid blue
 base_3='#ea9d34'  # yellow
-base_4='#9ccfd8'
+base_4='#2a273f'  # green blue - right side
 base_5='#907aa9'
 base_6='#575279'  # Light blue - main
-base_7='#2a273f'  # green blue - right side
-base_8="#f2e9e1"
+base_7='#9ccfd8'
+# base_8="#f2e9e1"
+base_8='#286987'  # blue
 base_9='#faf4ed'
 base_10='#b4637a'
 
