Tidied other config

--- a/tmux.conf
+++ b/tmux.conf
@@ -349,9 +349,9 @@ set -g mouse on
 # bind C-a send-prefix
 
 # move status line to top
-#set -g status-position top
+# set -g status-position top
 
-set -g pane-border-status top
+set -g pane-border-status off
 
 # quickly open a new window
 bind N new-window
