--- a/kitty.conf
+++ b/kitty.conf
@@ -26,49 +26,83 @@ background_opacity 0.9
 dynamic_background_opacity yes
 hide_window_decorations yes
 
-foreground               #e0def4
-background               #232136
-selection_foreground     #e0def4
-selection_background     #312f44
+# vim:ft=kitty
 
-url_color                #c4a7e7
+## name:     Catppuccin-Frappe
+## author:   Pocco81 (https://github.com/Pocco81)
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/frappe.conf
+## blurb:    Soothing pastel theme for the high-spirited!
 
-cursor                   #59546d
-cursor_text_color        #e0def4
 
-active_tab_foreground    #e0def4
-active_tab_background    #393552
-inactive_tab_foreground  #817c9c
-inactive_tab_background  #232136
+
+# The basic colors
+foreground              #C6D0F5
+background              #303446
+selection_foreground    #303446
+selection_background    #F2D5CF
+
+# Cursor colors
+cursor                  #F2D5CF
+cursor_text_color       #303446
+
+# URL underline color when hovering with mouse
+url_color               #F2D5CF
+
+# Kitty window border colors
+active_border_color     #BABBF1
+inactive_border_color   #737994
+bell_border_color       #E5C890
+
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
+
+# Tab bar colors
+active_tab_foreground   #232634
+active_tab_background   #CA9EE6
+inactive_tab_foreground #C6D0F5
+inactive_tab_background #292C3C
+tab_bar_background      #232634
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #303446
+mark1_background #BABBF1
+mark2_foreground #303446
+mark2_background #CA9EE6
+mark3_foreground #303446
+mark3_background #85C1DC
+
+# The 16 terminal colors
 
 # black
-color0   #393552
-color8   #817c9c
+color0 #51576D
+color8 #626880
 
 # red
-color1   #eb6f92
-color9   #eb6f92
+color1 #E78284
+color9 #E78284
 
 # green
-color2   #3e8fb0
-color10  #3e8fb0
+color2  #A6D189
+color10 #A6D189
 
 # yellow
-color3   #f6c177
-color11  #f6c177
+color3  #E5C890
+color11 #E5C890
 
 # blue
-color4   #9ccfd8
-color12  #9ccfd8
+color4  #8CAAEE
+color12 #8CAAEE
 
 # magenta
-color5   #c4a7e7
-color13  #c4a7e7
+color5  #F4B8E4
+color13 #F4B8E4
 
 # cyan
-color6   #ea9a97
-color14  #ea9a97
+color6  #81C8BE
+color14 #81C8BE
 
 # white
-color7   #e0def4
-color15  #e0def4
+color7  #B5BFE2
+color15 #A5ADCE
