--- a/tmux.conf
+++ b/tmux.conf
@@ -129,7 +129,7 @@ tmux_conf_theme_mode_bg=$base_3
 tmux_conf_theme_mode_attr='bold'
 
 # status line style
-tmux_conf_theme_status_fg=$base_6
+tmux_conf_theme_status_fg=$base_4
 tmux_conf_theme_status_bg=$base_9
 tmux_conf_theme_status_attr='none'
 
@@ -184,7 +184,7 @@ tmux_conf_theme_window_status_bell_bg='default'
 tmux_conf_theme_window_status_bell_attr='blink,bold'
 
 # window last status style
-tmux_conf_theme_window_status_last_fg=$base_6
+tmux_conf_theme_window_status_last_fg=$base_4
 tmux_conf_theme_window_status_last_bg='default'
 tmux_conf_theme_window_status_last_attr='none'
 
@@ -419,14 +419,14 @@ run -b '~/.tmux/plugins/tpm/tpm'
 
 # TokyoNight colors for Tmux
 
-base_0='#7aa2f7'  # blue
-base_1='#a9b1d6'  # gray
-base_2='#7aa2f7'  # mid blue
-base_3='#e0af68'  # yellow
-base_4='#414868'  # Darkest grey
-base_5='#a9b1d6'  # Dark grey
-base_6='#414868'  # Light blue - main
-base_7='#414868'  # green blue - right side
-base_8="#e9e9ed"  # White(ish)
-base_9='#7aa2f7'  # green
-base_10='#f7768e' # Red
+base_0='#1b1e28'  # blue
+base_1='#89ddff'  # gray - active
+base_2='#1b1e28'  # mid blue
+base_3='#1b1e28'  # yellow
+base_4='#5de4c7'  # Darkest grey
+base_5='#1b1e28'  # Dark grey
+base_6='#1b1e28'  # Light blue - main
+base_7='#5de4c7'  # green blue - right side
+base_8="#1b1e28"  # White(ish)
+base_9='#1b1e28'  # green
+base_10='#1b1e28' # Red
