--- a/tmux/poimandres.conf
+++ b/tmux/poimandres.conf
@@ -1,12 +1,15 @@
+#!/usr/bin/env bash
+
+# TokyoNight colors for Tmux
+
 base_0='#7aa2f7'  # blue
 base_1='#a9b1d6'  # gray
 base_2='#7aa2f7'  # mid blue
 base_3='#e0af68'  # yellow
-base_4='#414868'  # Darkest grey
+base_4='#5de4c7'  # Darkest grey
 base_5='#a9b1d6'  # Dark grey
-base_6='#414868'  # Light blue - main
-base_7='#414868'  # green blue - right side
+base_6='#5de4c7'  # Light blue - main
+base_7='#5de4c7'  # green blue - right side
 base_8="#e9e9ed"  # White(ish)
 base_9='#7aa2f7'  # green
 base_10='#f7768e' # Red
-
