--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -1,11 +1,13 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
-# font_family      DankMono Nerd Font Mono Regular
+# font_family      Dank Mono Regular
+# italic_font      Dank Mono Italic
+# bold_font        Dank Mono Regular
 
 font_family      MonoLisa Regular
-bold_font        MonoLisa Bold
 italic_font      MonoLisa Italic
 bold_italic_font MonoLisa Bold Italic
+bold_font        MonoLisa Bold
 
 # font_family      Hack Nerd Font Mono Regular
 # bold_font        Hack Nerd Font Mono Bold
