--- a/kitty/poimandres.conf
+++ b/kitty/poimandres.conf
@@ -15,7 +15,7 @@
   #tab_bar_background #1D202F
 
   # normal
-  color0 #1b1e28
+  color0 #fae4fc
   color1 #d0679d
   color2 #5de4c7
   color3 #fffac2
