--- a/kitty.conf
+++ b/kitty.conf
@@ -1,11 +1,13 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
-# font_family      DankMono Nerd Font Mono Regular
+# font_family      Dank Mono Regular
+# italic_font      Dank Mono Italic
+# bold_font        Dank Mono Regular
 
 font_family      MonoLisa Regular
-bold_font        MonoLisa Bold
 italic_font      MonoLisa Italic
 bold_italic_font MonoLisa Bold Italic
+bold_font        MonoLisa Bold
 
 # font_family      Hack Nerd Font Mono Regular
 # bold_font        Hack Nerd Font Mono Bold
@@ -27,42 +29,42 @@ dynamic_background_opacity yes
 hide_window_decorations yes
 
   # TokyoNight colors for Kitty
-
-  background #1b1e28
-  foreground #a6accd
-  selection_background #303340
-  selection_foreground #89ddff
-  url_color #fcc5e9
-  cursor #fcc5e9
-
+  
+  background #24283b
+  foreground #c0caf5
+  selection_background #364A82
+  selection_foreground #c0caf5
+  url_color #73daca
+  cursor #c0caf5
+  
   # Tabs
   active_tab_background #7aa2f7
   active_tab_foreground #1f2335
   inactive_tab_background #292e42
   inactive_tab_foreground #545c7e
   #tab_bar_background #1D202F
-
+  
   # normal
-  color0 #1b1e28
-  color1 #d0679d
-  color2 #5de4c7
-  color3 #fffac2
-  color4 #89ddff
-  color5 #fcc5e9
-  color6 #add7ff
-  color7 #ffffff
-
+  color0 #1D202F
+  color1 #f7768e
+  color2 #9ece6a
+  color3 #e0af68
+  color4 #7aa2f7
+  color5 #bb9af7
+  color6 #7dcfff
+  color7 #a9b1d6
+  
   # bright
-  color8 #a6accd
-  color9 #d0679d
-  color10 #5de4c7
-  color11 #fffac2
-  color12 #add7ff
-  color13 #fae4fc
-  color14 #fcc5e9
-  color15 #ffffff
-
+  color8 #414868
+  color9 #f7768e
+  color10 #9ece6a
+  color11 #e0af68
+  color12 #7aa2f7
+  color13 #bb9af7
+  color14 #7dcfff
+  color15 #c0caf5
+  
   # extended colors
   color16 #ff9e64
   color17 #db4b4b
-
+  
