--- a/tmux/poimandres.conf
+++ b/tmux/poimandres.conf
@@ -1,15 +1,15 @@
 #!/usr/bin/env bash
 
 # TokyoNight colors for Tmux
-
-base_0='#7aa2f7'  # blue
-base_1='#a9b1d6'  # gray
-base_2='#7aa2f7'  # mid blue
-base_3='#e0af68'  # yellow
-base_4='#5de4c7'  # Darkest grey
-base_5='#a9b1d6'  # Dark grey
+base_0='#1b1e28'  # blue
+base_1='#1b1e28'  # gray
+base_2='#1b1e28'  # mid blue
+base_3='#89ddff'  # yellow
+base_4='#1b1e28'  # Darkest grey
+base_5='#5de4c7'  # Dark grey
 base_6='#5de4c7'  # Light blue - main
-base_7='#5de4c7'  # green blue - right side
-base_8="#e9e9ed"  # White(ish)
-base_9='#7aa2f7'  # green
-base_10='#f7768e' # Red
+base_7='#89ddff'  # green blue - right side
+base_8="#1b1e28"  # White(ish)
+base_9='#1b1e28'  # green
+base_10='#1b1e28' # Red
+
