Add catpuccin mocha

--- a/kitty/catppuccinfrappe.conf
+++ b/kitty/catppuccinfrappe.conf
@@ -1,7 +1,7 @@
 # vim:ft=kitty
 
-## name:     Catppuccin-Frappe
-## author:   Pocco81 (https://github.com/Pocco81)
+## name:     Catppuccin Kitty Diff Mocha
+## author:   Catppuccin Org
 ## license:  MIT
 ## upstream: https://github.com/catppuccin/kitty/blob/main/frappe.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
