--- a/kitty/catppuccinlatte.conf
+++ b/kitty/catppuccinlatte.conf
@@ -1,7 +1,7 @@
 # vim:ft=kitty
 
-## name:     Catppuccin-Latte
-## author:   Pocco81 (https://github.com/Pocco81)
+## name:     Catppuccin Kitty Diff Mocha
+## author:   Catppuccin Org
 ## license:  MIT
 ## upstream: https://github.com/catppuccin/kitty/blob/main/latte.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
@@ -78,5 +78,3 @@ color14 #179299
 # white
 color7  #ACB0BE
 color15 #BCC0CC
-Footer
-
