Add pomodoro timer

--- a/tmux.conf
+++ b/tmux.conf
@@ -807,6 +807,12 @@ bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
 # set vi mode for copy mode
 setw -g mode-keys vi
 
+# pomodoro timer
+set -g @pomodoro_mins 50                    # The duration of the pomodoro
+set -g @pomodoro_break_mins 10               # The duration of the break after the pomodoro
+set -g @pomodoro_notifications 'on'
+
+
 # Buffers to/from Mac clipboard, yay tmux book from pragprog
 # bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 # bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
@@ -819,6 +825,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'jim-at-jibba/nord-tmux'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @pomodoro_on " 🌿"
+set -g @pomodoro_complete " 🎉"
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
