--- a/kitty.conf
+++ b/kitty.conf
@@ -14,7 +14,7 @@ bold_font        MonoLisa Bold
 # italic_font      Hack Nerd Font Mono Italic
 # bold_italic_font Hack Nerd Font Mono Bold Italic
 
-font_size 17.0
+font_size 16.0
 
 disable_ligatures cursor
 
@@ -33,78 +33,78 @@ hide_window_decorations yes
 ## name:     Catppuccin Kitty Diff Mocha
 ## author:   Catppuccin Org
 ## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
+## upstream: https://github.com/catppuccin/kitty/blob/main/frappe.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
 
 
 # The basic colors
-foreground              #CDD6F4
-background              #1E1E2E
-selection_foreground    #1E1E2E
-selection_background    #F5E0DC
+foreground              #C6D0F5
+background              #303446
+selection_foreground    #303446
+selection_background    #F2D5CF
 
 # Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
+cursor                  #F2D5CF
+cursor_text_color       #303446
 
 # URL underline color when hovering with mouse
-url_color               #F5E0DC
+url_color               #F2D5CF
 
 # Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
-bell_border_color       #F9E2AF
+active_border_color     #BABBF1
+inactive_border_color   #737994
+bell_border_color       #E5C890
 
 # OS Window titlebar colors
 wayland_titlebar_color system
 macos_titlebar_color system
 
 # Tab bar colors
-active_tab_foreground   #11111B
-active_tab_background   #CBA6F7
-inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
-tab_bar_background      #11111B
+active_tab_foreground   #232634
+active_tab_background   #CA9EE6
+inactive_tab_foreground #C6D0F5
+inactive_tab_background #292C3C
+tab_bar_background      #232634
 
 # Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #B4BEFE
-mark2_foreground #1E1E2E
-mark2_background #CBA6F7
-mark3_foreground #1E1E2E
-mark3_background #74C7EC
+mark1_foreground #303446
+mark1_background #BABBF1
+mark2_foreground #303446
+mark2_background #CA9EE6
+mark3_foreground #303446
+mark3_background #85C1DC
 
 # The 16 terminal colors
 
 # black
-color0 #45475A
-color8 #585B70
+color0 #51576D
+color8 #626880
 
 # red
-color1 #F38BA8
-color9 #F38BA8
+color1 #E78284
+color9 #E78284
 
 # green
-color2  #A6E3A1
-color10 #A6E3A1
+color2  #A6D189
+color10 #A6D189
 
 # yellow
-color3  #F9E2AF
-color11 #F9E2AF
+color3  #E5C890
+color11 #E5C890
 
 # blue
-color4  #89B4FA
-color12 #89B4FA
+color4  #8CAAEE
+color12 #8CAAEE
 
 # magenta
-color5  #F5C2E7
-color13 #F5C2E7
+color5  #F4B8E4
+color13 #F4B8E4
 
 # cyan
-color6  #94E2D5
-color14 #94E2D5
+color6  #81C8BE
+color14 #81C8BE
 
 # white
-color7  #BAC2DE
-color15 #A6ADC8
+color7  #B5BFE2
+color15 #A5ADCE
