All sorts - sorry

--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -2,7 +2,7 @@
 
 # font_family      Dank Mono Regular
 # italic_font      Dank Mono Italic
-# bold_font        Dank Mono Regular
+# bold_font        Dank Mono Bold
 
 font_family      MonoLisa Regular
 italic_font      MonoLisa Italic
@@ -14,6 +14,7 @@ bold_font        MonoLisa Bold
 # italic_font      Hack Nerd Font Mono Italic
 # bold_italic_font Hack Nerd Font Mono Bold Italic
 
+# 16 for monolist 17 for dank
 font_size 16.0
 
 disable_ligatures cursor
