--- a/kitty.conf
+++ b/kitty.conf
@@ -29,49 +29,47 @@ background_opacity 0.97
 dynamic_background_opacity yes
 hide_window_decorations yes
 
-foreground               #D1D5DB
-background               #111827
-selection_foreground     #D1D5DB
-selection_background     #374151
+# Nord Colorscheme for Kitty
+# Based on:
+# - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
+# - https://github.com/arcticicestudio/nord-hyper
 
-url_color                #957FB8
-
-cursor                   #D1D5DB
-cursor_text_color        #111827
-
-active_tab_foreground    #D1D5DB
-active_tab_background    #111827
-inactive_tab_foreground  #817c9c
-inactive_tab_background  #232136
+foreground            #D8DEE9
+background            #2E3440
+selection_foreground  #000000
+selection_background  #FFFACD
+url_color             #0087BD
+cursor                #81A1C1
 
 # black
-color0   #6B7280
-color8   #6B7280
+color0   #3B4252
+color8   #4C566A
 
 # red
-color1   #FCA5A5
-color9   #FCA5A5
+color1   #BF616A
+color9   #BF616A
 
 # green
-color2   #B1E3AD
-color10  #B1E3AD
+color2   #A3BE8C
+color10  #A3BE8C
 
 # yellow
-color3   #FBC19D
-color11  #FBC19D
+color3   #EBCB8B
+color11  #EBCB8B
 
 # blue
-color4   #BAE6FD
-color12  #BAE6FD
+color4  #81A1C1
+color12 #81A1C1
 
 # magenta
-color5   #957FB8
-color13  #938AA9
+color5   #B48EAD
+color13  #B48EAD
 
 # cyan
-color6   #DDD6FE
-color14  #DDD6FE
+color6   #88C0D0
+color14  #8FBCBB
 
 # white
-color7   #A5F3FC
-color15  #A5F3FC
+color7   #E5E9F0
+color15  #ECEFF4
+
