--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -1,4 +1,5 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
+# clear_all_shortcuts yes
 
 # font_family      Dank Mono Regular
 # italic_font      Dank Mono Italic
