--- a/kitty.conf
+++ b/kitty.conf
@@ -30,43 +30,49 @@ background_opacity 0.97
 dynamic_background_opacity yes
 hide_window_decorations yes
 
-  # TokyoNight colors for Kitty
-  
-  background #24283b
-  foreground #c0caf5
-  selection_background #364A82
-  selection_foreground #c0caf5
-  url_color #73daca
-  cursor #c0caf5
-  
-  # Tabs
-  active_tab_background #7aa2f7
-  active_tab_foreground #1f2335
-  inactive_tab_background #292e42
-  inactive_tab_foreground #545c7e
-  #tab_bar_background #1D202F
-  
-  # normal
-  color0 #1D202F
-  color1 #f7768e
-  color2 #9ece6a
-  color3 #e0af68
-  color4 #7aa2f7
-  color5 #bb9af7
-  color6 #7dcfff
-  color7 #a9b1d6
-  
-  # bright
-  color8 #414868
-  color9 #f7768e
-  color10 #9ece6a
-  color11 #e0af68
-  color12 #7aa2f7
-  color13 #bb9af7
-  color14 #7dcfff
-  color15 #c0caf5
-  
-  # extended colors
-  color16 #ff9e64
-  color17 #db4b4b
-  
+foreground               #e0def4
+background               #232136
+selection_foreground     #e0def4
+selection_background     #312f44
+
+url_color                #c4a7e7
+
+cursor                   #59546d
+cursor_text_color        #e0def4
+
+active_tab_foreground    #e0def4
+active_tab_background    #393552
+inactive_tab_foreground  #817c9c
+inactive_tab_background  #232136
+
+# black
+color0   #393552
+color8   #817c9c
+
+# red
+color1   #eb6f92
+color9   #eb6f92
+
+# green
+color2   #3e8fb0
+color10  #3e8fb0
+
+# yellow
+color3   #f6c177
+color11  #f6c177
+
+# blue
+color4   #9ccfd8
+color12  #9ccfd8
+
+# magenta
+color5   #c4a7e7
+color13  #c4a7e7
+
+# cyan
+color6   #ea9a97
+color14  #ea9a97
+
+# white
+color7   #e0def4
+color15  #e0def4
