--- a/kitty.conf
+++ b/kitty.conf
@@ -30,52 +30,43 @@ background_opacity 0.97
 dynamic_background_opacity yes
 hide_window_decorations yes
 
-# Nightfox colors for Kitty
-## name: terafox
-## upstream: https://github.com/edeneast/nightfox.nvim/raw/main/extra/terafox/nightfox_kitty.conf
-
-background #152528
-foreground #e6eaea
-selection_background #293e40
-selection_foreground #e6eaea
-url_color #7aa4a1
-
-# Cursor
-# uncomment for reverse background
-# cursor none
-cursor #e6eaea
-
-# Border
-active_border_color #5a93aa
-inactive_border_color #2d4f56
-bell_border_color #ff8349
-
-# Tabs
-active_tab_background #5a93aa
-active_tab_foreground #0f1c1e
-inactive_tab_background #293e40
-inactive_tab_foreground #6d7f8b
-
-# normal
-color0 #2f3239
-color1 #e85c51
-color2 #7aa4a1
-color3 #fda47f
-color4 #5a93aa
-color5 #ad5c7c
-color6 #a1cdd8
-color7 #ebebeb
-
-# bright
-color8 #4e5157
-color9 #eb746b
-color10 #8eb2af
-color11 #fdb292
-color12 #73a3b7
-color13 #b97490
-color14 #afd4de
-color15 #eeeeee
-
-# extended colors
-color16 #ff8349
-color17 #cb7985
+  # TokyoNight colors for Kitty
+  
+  background #24283b
+  foreground #c0caf5
+  selection_background #364A82
+  selection_foreground #c0caf5
+  url_color #73daca
+  cursor #c0caf5
+  
+  # Tabs
+  active_tab_background #7aa2f7
+  active_tab_foreground #1f2335
+  inactive_tab_background #292e42
+  inactive_tab_foreground #545c7e
+  #tab_bar_background #1D202F
+  
+  # normal
+  color0 #1D202F
+  color1 #f7768e
+  color2 #9ece6a
+  color3 #e0af68
+  color4 #7aa2f7
+  color5 #bb9af7
+  color6 #7dcfff
+  color7 #a9b1d6
+  
+  # bright
+  color8 #414868
+  color9 #f7768e
+  color10 #9ece6a
+  color11 #e0af68
+  color12 #7aa2f7
+  color13 #bb9af7
+  color14 #7dcfff
+  color15 #c0caf5
+  
+  # extended colors
+  color16 #ff9e64
+  color17 #db4b4b
+  
