--- a/tmux/base.conf
+++ b/tmux/base.conf
@@ -569,6 +569,7 @@ bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'jim-at-jibba/nord-tmux'
 
 run -b '~/.tmux/plugins/tpm/tpm'
