Add icons to window name

--- a/tmux.conf
+++ b/tmux.conf
@@ -538,6 +538,9 @@ bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
 # set vi mode for copy mode
 setw -g mode-keys vi
 
+# Set window name
+set -g @tmux-nerd-font-window-name-show-name true
+
 # Buffers to/from Mac clipboard, yay tmux book from pragprog
 # bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 # bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
@@ -570,6 +573,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'jim-at-jibba/nord-tmux'
 
 run -b '~/.tmux/plugins/tpm/tpm'
