--- a/tmux.conf
+++ b/tmux.conf
@@ -1,31 +1,95 @@
-# https://github.com/gpakosz/.tmux
-# (‑●‑●)> dual licensed under the WTFPL v2 license and the MIT license,
-#         without any warranty.
-#         Copyright 2012— Gregory Pakosz (@gpakosz).
+setw -g xterm-keys on
+set -s escape-time 10                     # faster command sequences
+set -sg repeat-time 600                   # increase repeat timeout
+set -s focus-events on
+
+set -g prefix2 C-a                        # GNU-Screen compatible prefix
+bind C-a send-prefix -2
+
+set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
+setw -q -g utf8 on
+
+set -g history-limit 5000                 # boost history
 
 
+# reload configuration
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
+
+# -- display -------------------------------------------------------------------
+
+set -g base-index 1           # start windows numbering at 1
+setw -g pane-base-index 1     # make pane numbering consistent with windows
+
+setw -g automatic-rename on   # rename window to reflect current program
+set -g renumber-windows on    # renumber windows when a window is closed
+
+set -g set-titles on          # set terminal title
+
+set -g display-panes-time 800 # slightly longer pane indicators display time
+set -g display-time 1000      # slightly longer status messages display time
+
+set -g status-interval 10     # redraw status line every 10 seconds
+
+# clear both screen and history
+bind -n C-l send-keys C-l \; run 'sleep 0.2' \; clear-history
+
+# activity
+set -g monitor-activity on
+set -g visual-activity on
+
+
+# -- navigation ----------------------------------------------------------------
+
+# create session
+bind C-c new-session
+
+# find session
+bind C-f command-prompt -p find-session 'switch-client -t %%'
+
+# session navigation
+bind BTab switch-client -l  # move to last session
+
+# split current window horizontally
+bind - split-window -v
+# split current window vertically
+bind _ split-window -h
+
+# pane navigation
+bind -r h select-pane -L  # move left
+bind -r j select-pane -D  # move down
+bind -r k select-pane -U  # move up
+bind -r l select-pane -R  # move right
+bind > swap-pane -D       # swap current pane with the next one
+bind < swap-pane -U       # swap current pane with the previous one
+
+# window navigation
+unbind n
+unbind p
+# bind -r C-h previous-window # select previous window
+# bind -r C-l next-window     # select next window
+bind Tab last-window        # move to last active window
+
+
+# -- copy mode -----------------------------------------------------------------
+
+bind Enter copy-mode # enter copy mode
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# copy to X11 clipboard
+if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
+if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
+# copy to macOS clipboard
+if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | pbcopy"'
+if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 
 # -- windows & pane creation ---------------------------------------------------
 
-# new window retains current path, possible values are:
-#   - true
-#   - false (default)
-tmux_conf_new_window_retain_current_path=false
-
-# new pane retains current path, possible values are:
-#   - true (default)
-#   - false
-tmux_conf_new_pane_retain_current_path=true
-
-# new pane tries to reconnect ssh sessions (experimental), possible values are:
-#   - true
-#   - false (default)
-tmux_conf_new_pane_reconnect_ssh=false
-
-# prompt for session name when creating a new session, possible values are:
-#   - true
-#   - false (default)
-tmux_conf_new_session_prompt=false
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # -- clipboard -----------------------------------------------------------------
 
@@ -47,9 +111,6 @@ set -g default-terminal "xterm-kitty"
 # set -ga terminal-overrides ",xterm-256color:Tc"
 # set -ga terminal-overrides ",screen-256color:Tc"
 
-# increase history size
-#set -g history-limit 10000
-
 # start with mouse mode enabled
 set -g mouse on
 
@@ -67,16 +128,9 @@ unbind %
 # synchronize all panes in a window
 bind y setw synchronize-panes
 
-# pane movement shortcuts
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
 
 bind-key -r i run-shell "tmux neww ~/dotfiles/cht.sh"
+
 # Resize pane shortcuts
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 5
@@ -95,18 +149,6 @@ setw -g mode-keys vi
 # Set window name
 set -g @tmux-nerd-font-window-name-show-name true
 
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
-bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
-
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
@@ -116,11 +158,3 @@ set -g @plugin 'jim-at-jibba/nord-tmux'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
-# Useful tips
-#
-#
-#
-# Reorder windows - use prefix first
-# swap-window -s 3 -t
-# move panes - prefix + ctrl + o
-#!/usr/bin/env bash
