Simplify tmux again

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,150 +1,43 @@
-setw -g xterm-keys on
-set -s escape-time 10                     # faster command sequences
-set -sg repeat-time 600                   # increase repeat timeout
-set -s focus-events on
-
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
-
-set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
-setw -q -g utf8 on
-
-set -g history-limit 5000                 # boost history
-
+set -g default-terminal "xterm-kitty"
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
+set -g mouse on
 
-# -- display -------------------------------------------------------------------
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+# Set keys vim
+setw -g mode-keys vi
 
-set -g base-index 1           # start windows numbering at 1
-setw -g pane-base-index 1     # make pane numbering consistent with windows
-
-setw -g automatic-rename on   # rename window to reflect current program
-set -g renumber-windows on    # renumber windows when a window is closed
-
-set -g set-titles on          # set terminal title
-
-set -g display-panes-time 800 # slightly longer pane indicators display time
-set -g display-time 1000      # slightly longer status messages display time
-
-set -g status-interval 10     # redraw status line every 10 seconds
-
-# clear both screen and history
-bind -n C-l send-keys C-l \; run 'sleep 0.2' \; clear-history
-
-# activity
-set -g monitor-activity on
-set -g visual-activity on
-
-
-# -- navigation ----------------------------------------------------------------
-
-# create session
-bind C-c new-session
-
-# find session
-bind C-f command-prompt -p find-session 'switch-client -t %%'
-
-# session navigation
-bind BTab switch-client -l  # move to last session
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
 
 # split current window horizontally
 bind - split-window -v
 # split current window vertically
-bind _ split-window -h
+bind | split-window -h
 
-# pane navigation
-bind -r h select-pane -L  # move left
-bind -r j select-pane -D  # move down
-bind -r k select-pane -U  # move up
-bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
-
-# window navigation
-unbind n
-unbind p
-# bind -r C-h previous-window # select previous window
-# bind -r C-l next-window     # select next window
-bind Tab last-window        # move to last active window
-
-
-# -- copy mode -----------------------------------------------------------------
-
-bind Enter copy-mode # enter copy mode
-
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-
-# copy to X11 clipboard
-if -b 'command -v xsel > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xsel -i -b"'
-if -b '! command -v xsel > /dev/null 2>&1 && command -v xclip > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | xclip -i -selection clipboard >/dev/null 2>&1"'
-# copy to macOS clipboard
-if -b 'command -v pbcopy > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | pbcopy"'
-if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
-
-# -- windows & pane creation ---------------------------------------------------
-
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
-# -- clipboard -----------------------------------------------------------------
-
-# in copy mode, copying selection also copies to the OS clipboard
-#   - true
-#   - false (default)
-# on macOS, this requires installing reattach-to-user-namespace, see README.md
-# on Linux, this requires xsel or xclip
-tmux_conf_copy_to_os_clipboard=false
-
-
-# -- user customizations -------------------------------------------------------
-# this is the place to override or undo settings
-set -g default-terminal "xterm-kitty"
-# set -ga terminal-overrides ",*:Smulx=\E[4::%p1%dm"
-
-# Before using xterm-kitty
-# set -g default-terminal "screen-256color"
-# set -ga terminal-overrides ",xterm-256color:Tc"
-# set -ga terminal-overrides ",screen-256color:Tc"
-
-# start with mouse mode enabled
-set -g mouse on
-
-set -g pane-border-status off
-
 # quickly open a new window
 bind N new-window
-
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
-# synchronize all panes in a window
-bind y setw synchronize-panes
-
-
-bind-key -r i run-shell "tmux neww ~/dotfiles/cht.sh"
-
 # Resize pane shortcuts
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 10
 
-#  maximizing and restoring windows
-unbind Up
-bind Up new-window -d -n fullscreen \; swap-pane -s fullscreen.1 \; select-window -t fullscreen
-unbind Down
-bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
-
 # set vi mode for copy mode
-setw -g mode-keys vi
+bind Enter copy-mode # enter copy mode
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -174,15 +67,10 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
-# Set window name
-set -g @tmux-nerd-font-window-name-show-name true
-
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'jim-at-jibba/nord-tmux'
 
-run -b '~/.tmux/plugins/tpm/tpm'
 
+run '~/.tmux/plugins/tpm/tpm'
