--- a/tmux.conf
+++ b/tmux.conf
@@ -74,3 +74,6 @@ set -g @plugin 'jim-at-jibba/nord-tmux'
 
 
 run '~/.tmux/plugins/tpm/tpm'
+
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
