Fix new pane commanf

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,9 +18,9 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # split current window horizontally
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 # split current window vertically
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
@@ -75,5 +75,3 @@ set -g @plugin 'jim-at-jibba/nord-tmux'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
