--- a/tmux.conf
+++ b/tmux.conf
@@ -71,6 +71,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'jim-at-jibba/nord-tmux'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 
 run '~/.tmux/plugins/tpm/tpm'
