--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -6,9 +6,14 @@
 # bold_font        Dank Mono Bold
 
 font_family      MonoLisa Regular
-italic_font      MonoLisa Italic
+italic_font      MonoLisa Regular Italic
 bold_italic_font MonoLisa Bold Italic
 bold_font        MonoLisa Bold
+
+# font_family      MonoLisa Besty Regular
+# italic_font      MonoLisa Besty Italic
+# bold_italic_font MonoLisa Besty Bold Italic
+# bold_font        MonoLisa Besty Bold
 
 # font_family      Hack Nerd Font Mono Regular
 # bold_font        Hack Nerd Font Mono Bold
@@ -17,6 +22,8 @@ bold_font        MonoLisa Bold
 
 # 16 for monolist 17 for dank
 font_size 16.0
+# font_features MonoLisa-Regular +zero +ss07 +ss08 +ss09
+# font_features MonoLisa-Italic +zero +ss02 +ss07 +ss08 +ss09
 
 disable_ligatures cursor
 
