--- a/tmux.conf
+++ b/tmux.conf
@@ -44,32 +44,6 @@ set -g @prefix_highlight_output_prefix "#[fg=brightcyan]#[bg=black]#[nobold]#[no
 set -g @prefix_highlight_output_suffix ""
 set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
 
-#+--------+
-#+ Status +
-#+--------+
-# Dark theme
-#+--- Bars ---+
-# set -g status-right-length 120
-# set -g status-left "#[fg=blue,bg=blue,nobold,noitalics,nounderscore] #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-# set -g status-right "#{prefix_highlight}#[fg=blue,bg=black,nobold,noitalics,nounderscore]#[fg=black,bg=blue] CPU: #{cpu_icon} #{cpu_percentage} #[fg=black,bg=blue] #{pomodoro_status} #(osascript ~/dotfiles/applescripts/spotify.scpt)"
-#
-# #+--- Windows ---+
-# set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=cyan,bg=brightblack]#I #[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
-# set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
-# set -g window-status-separator ""
-
-# Light theme
-# +--- Bars ---+
-set -g status-right-length 120
-set -g status-left "#[fg=blue,bg=blue,nobold,noitalics,nounderscore] #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#{prefix_highlight}#[fg=blue,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=blue] CPU: #{cpu_icon} #{cpu_percentage} #[fg=white,bg=blue] #{pomodoro_status} #(osascript ~/dotfiles/applescripts/spotify.scpt)"
-
-#+--- Windows ---+
-set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=cyan,bg=brightblack]#I #[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
-set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=white,bg=cyan]#I #[fg=white,bg=cyan,nobold,noitalics,nounderscore] #[fg=white,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
-set -g window-status-separator ""
-
-
 # THEME END
 
 # reload configuration
@@ -117,6 +91,11 @@ set -g @fzf-url-history-limit '2000'
 set -g @pomodoro_complete ' ✅' # The formatted output when the pomodoro is finished
 set -g @pomodoro_on ' 🍅'       # The formatted output when the pomodoro is running
 set -g @pomodoro_start 'P'     # Start a Pomodoro with tmux-prefix + p
+set -g @pomodoro_mins 50                       # The duration of the Pomodoro
+set -g @pomodoro_break_mins 10                  # The duration of the break after the Pomodoro completes
+set -g @pomodoro_intervals 4                   # The number of intervals before a longer break is started
+set -g @pomodoro_long_break_mins 25            # The duration of the long break
+set -g @pomodoro_repeat 'off'                  # Automatically repeat the Pomodoros?
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tpm'
@@ -131,3 +110,13 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 
 run '~/.tmux/plugins/tpm/tpm'
 
+# Dark theme
+#+--- Bars ---+
+set -g status-right-length 120
+set -g status-left "#[fg=blue,bg=blue,nobold,noitalics,nounderscore] #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
+set -g status-right "#{prefix_highlight}#[fg=blue,bg=black,nobold,noitalics,nounderscore]#[fg=black,bg=blue] CPU: #{cpu_icon} #{cpu_percentage} #[fg=black,bg=blue] #{pomodoro_status} #(osascript ~/dotfiles/applescripts/spotify.scpt)"
+
+#+--- Windows ---+
+set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=cyan,bg=brightblack]#I #[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
+set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
+set -g window-status-separator ""
