--- a/tmux/light.conf
+++ b/tmux/light.conf
@@ -2,7 +2,7 @@
  # +--- Bars ---+
  set -g status-right-length 120
  set -g status-left "#[fg=blue,bg=blue,nobold,noitalics,nounderscore] #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
- set -g status-right "#{prefix_highlight}#[fg=blue,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=blue] CPU: #{cpu_icon} #{cpu_percentage} #[fg=white,bg=blue] #{pomodoro_status} #(osascript ~/dotfiles/applescripts/spotify.scpt)"
+ set -g status-right "#{prefix_highlight}#[fg=blue,bg=black,nobold,noitalics,nounderscore]#[fg=white,bg=blue] #{pomodoro_status} #(osascript ~/dotfiles/applescripts/spotify.scpt)"
 
  #+--- Windows ---+
  set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=cyan,bg=brightblack]#I #[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
