--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -5,20 +5,20 @@
 # italic_font      Dank Mono Italic
 # bold_font        Dank Mono Bold
 
-# font_family      MonoLisa Regular
-# italic_font      MonoLisa Regular Italic
-# bold_italic_font MonoLisa Bold Italic
-# bold_font        MonoLisa Bold
+font_family      MonoLisa Regular
+italic_font      MonoLisa Regular Italic
+bold_italic_font MonoLisa Bold Italic
+bold_font        MonoLisa Bold
 
-font_family      Berkeley Mono Regular
-italic_font      Berkeley Mono Italic
-bold_italic_font Berkeley Mono Bold Italic
-bold_font        Berkeley Mono Bold
+# font_family      Berkeley Mono Regular
+# italic_font      Berkeley Mono Italic
+# bold_italic_font Berkeley Mono Bold Italic
+# bold_font        Berkeley Mono Bold
 
-# font_family      MonoLisa Besty Regular
-# italic_font      MonoLisa Besty Italic
-# bold_italic_font MonoLisa Besty Bold Italic
-# bold_font        MonoLisa Besty Bold
+# font_family      Monaspace Argon Regular
+# italic_font      Monaspace Argon Italic
+# bold_italic_font Monaspace Argon Bold Italic
+# bold_font        Monaspace Argon Bold
 
 # font_family      Hack Nerd Font Mono Regular
 # bold_font        Hack Nerd Font Mono Bold
