--- a/tmux.conf
+++ b/tmux.conf
@@ -85,6 +85,16 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+bind-key -T prefix t set-option -g status
+# open lazygit in a new window with prefix+g
+bind-key g new-window -n lazygit -c "#{pane_current_path}" "lazygit"
+
+bind C-e display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    sed '/^$/d' |\
+    fzf --reverse --header jump-to-session |\
+    xargs tmux switch-client -t"
+
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 # set -g @pomodoro_cancel ''    # Cancel a Pomodoro with tmux-prefix key + P
