--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -10,10 +10,15 @@
 #bold_italic_font MonoLisa Bold Italic
 #bold_font        MonoLisa Bold
 
-font_family      Berkeley Mono Regular
-italic_font      Berkeley Mono Italic
-bold_italic_font Berkeley Mono Bold Italic
-bold_font        Berkeley Mono Bold
+#font_family      Berkeley Mono Regular
+#italic_font      Berkeley Mono Italic
+#bold_italic_font Berkeley Mono Bold Italic
+#bold_font        Berkeley Mono Bold
+
+font_family       CommitMono
+italic_font       CommitMono-Italic
+bold_italic_font  CommitMono-BoldItalic
+bold_font         CommitMono-Bold
 
 # font_family      Monaspace Argon Regular
 # italic_font      Monaspace Argon Italic
