--- a/tmux.conf
+++ b/tmux.conf
@@ -128,3 +128,13 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 
 run '~/.tmux/plugins/tpm/tpm'
 
+# Dark theme
+#+--- Bars ---+
+set -g status-right-length 120
+set -g status-left "#[fg=blue,bg=blue,nobold,noitalics,nounderscore] #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
+set -g status-right "#{prefix_highlight}#[fg=blue,bg=black,nobold,noitalics,nounderscore]#[fg=black,bg=blue] #{pomodoro_status} #(osascript ~/dotfiles/applescripts/spotify.scpt)"
+
+#+--- Windows ---+
+set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=cyan,bg=brightblack]#I #[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
+set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
+set -g window-status-separator ""
