--- a/teamocil/mob.yml
+++ b/teamocil/mob.yml
@@ -4,14 +4,12 @@ windows:
     layout: 9cad,253x68,0,0[253x54,0,0,1,253x13,0,55{83x13,0,55,2,82x13,84,55,10,86x13,167,55,3}]
     panes:
       - commands:
-        - name vim
-        - v
-
+          - name vim
+          - v
       - commands:
-        - name App
-        - npm run dev && npm run start
+          - name App
+          - npx react-native start --reset-cache
       - commands:
-        - name Build
-        - npm run ios
+          - name Test
       - commands:
-        - name Other
+          - name Other
