Change line height in kitty

--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -32,6 +32,7 @@ bold_font        Berkeley Mono Bold
 
 # 16 for monolist 17 for dank
 font_size 16.0
+modify_font cell_height 140%
 # font_features MonoLisa-Regular +zero +ss07 +ss08 +ss09
 # font_features MonoLisa-Italic +zero +ss02 +ss07 +ss08 +ss09
 # "Nerd Fonts - Pomicons"
