Update to new version of Berkley

--- a/kitty/base.conf
+++ b/kitty/base.conf
@@ -11,9 +11,14 @@
 # bold_font        MonoLisa Bold
 
 font_family      Berkeley Mono Regular
-italic_font      Berkeley Mono Italic
-bold_italic_font Berkeley Mono Bold Italic
+italic_font      Berkeley Mono Oblique
+bold_italic_font Berkeley Mono Bold Oblique
 bold_font        Berkeley Mono Bold
+
+# font_family      Berkeley Mono SemiCondensed
+# italic_font      Berkeley Mono SemiCondensed Oblique
+# bold_italic_font Berkeley Mono Bold SemiCondensed Oblique
+# bold_font        Berkeley Mono Bold SemiCondensed
 
 # font_family       CommitMono
 # italic_font       CommitMono-Italic
