--- a/tmux/base.conf
+++ b/tmux/base.conf
@@ -92,7 +92,7 @@ wg_music="#{?#{>=:#{p-4:window_width}, 120},#{?$sc_music,$sc_music ,},}"
 #################################### THEME ###################################
 
 #+--- tmux-prefix-highlight ---+
-set -g status-style bg=black,fg=white
+set -g status-style bg=brightblack,fg=white
 set -g @prefix_highlight_fg black
 set -g @prefix_highlight_bg brightcyan
 set -g @prefix_highlight_output_prefix "#[fg=brightcyan]#[bg=black]#[nobold]#[noitalics]#[nounderscore]#[bg=brightcyan]#[fg=black]"
